--- a/Mosquito-Game/index.html
+++ b/Mosquito-Game/index.html
@@ -15,12 +15,12 @@
   </div>
   <div class="main-container">
     <div id="show-first">
-      <img src="./img/brazil-g6e86924d6_640.png" id="img-show" />
+      <img src="./brazil-g6e86924d6_640.png" id="img-show" />
       <span id="first-text">!! Hit Me If You Can !!</span>
       <span>!! Hit the mosquito with in 30 seconds as much time as you can. !!
       </span>
     </div>
-    <img src="./img/01.png" alt="mosquito" onclick="hitMosq()" id="mosquito" />
+    <img src="./01.png" alt="mosquito" onclick="hitMosq()" id="mosquito" />
   </div>
   <div class="footer">
     <div class="buttons">
