--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mosquito-Game</title>
-  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="./style.css" />
 </head>
 
 <body>
@@ -33,7 +33,7 @@
       <span id="timer"></span>
     </div>
   </div>
-  <script src="./js/app.js"></script>
+  <script src="./app.js"></script>
 </body>
 
 </html>
