--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <span id="first-text">!! Hit Me If You Can !!</span>
       <span>!! Hit the mosquito with in 30 seconds as much time as you can. !!
       </span>
+      <span>**Click on Mosquito to Hit.</span>
     </div>
     <img src="./01.png" alt="mosquito" onclick="hitMosq()" id="mosquito" />
   </div>
