Some changes in html file

--- a/index.html
+++ b/index.html
@@ -2,9 +2,6 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mosquito-Game</title>
   <link rel="stylesheet" href="./style.css" />
 </head>
@@ -17,7 +14,7 @@
     <div id="show-first">
       <img src="./brazil-g6e86924d6_640.png" id="img-show" />
       <span id="first-text">!! Hit Me If You Can !!</span>
-      <span>!! Hit the mosquito with in 30 seconds as much time as you can. !!
+      <span>!! **Hit the mosquito with in 30 seconds as much time as you can. !!
       </span>
       <span id="hit-text">**Click on Mosquito to Hit.</span>
     </div>
@@ -36,5 +33,4 @@
   </div>
   <script src="./app.js"></script>
 </body>
-
 </html>
